manifests/cluster-addons/argocd/templates/ciliumnetworkpolicy.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: argocd-server
  namespace: argocd
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/instance: argocd
      app.kubernetes.io/name: argocd-server

  ingress:
    - fromEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: monitoring
            app.kubernetes.io/name: prometheus-blackbox-exporter
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: envoy-gateway-system
            gateway.envoyproxy.io/owning-gateway-name: tailscale-sre
      toPorts:
        - ports:
            - port: '8080'
              protocol: TCP

    - fromEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: monitoring
            app.kubernetes.io/name: prometheus
      toPorts:
        - ports:
            - port: '8083'
              protocol: TCP

  egress:
    - toEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: kube-system
            k8s-app: kube-dns
      toPorts:
        - ports:
            - port: '53'
              protocol: ANY
          rules:
            dns:
              - matchPattern: '*'

    - toEndpoints:
        - matchLabels:
            app.kubernetes.io/instance: argocd
            app.kubernetes.io/name: argocd-redis
      toPorts:
        - ports:
            - port: '6379'
              protocol: TCP

    - toEndpoints:
        - matchLabels:
            app.kubernetes.io/instance: argocd
            app.kubernetes.io/name: argocd-repo-server
      toPorts:
        - ports:
            - port: '8081'
              protocol: TCP

    - toFQDNs:
        - matchName: authentik.bakseter.no
      toPorts:
        - ports:
            - port: '443'
              protocol: TCP

    - toEntities:
        - kube-apiserver
      toPorts:
        - ports:
            - port: '6443'
              protocol: TCP

    # Not covered by 'kube-apiserver', since IP is hardcoded
    # (this could as well have been another clusters API server)
    - toCIDR:
        - 192.168.30.190/32
      toPorts:
        - ports:
            - port: '6443'
              protocol: TCP
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: argocd-application-controller
  namespace: argocd
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/instance: argocd
      app.kubernetes.io/name: argocd-application-controller

  ingress:
    - fromEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: monitoring
            app.kubernetes.io/name: prometheus
      toPorts:
        - ports:
            - port: '8082'
              protocol: TCP

  egress:
    - toEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: kube-system
            k8s-app: kube-dns
      toPorts:
        - ports:
            - port: '53'
              protocol: ANY
          rules:
            dns:
              - matchPattern: '*'

    - toEntities:
        - kube-apiserver
      toPorts:
        - ports:
            - port: '6443'
              protocol: TCP

    - toEndpoints:
        - matchLabels:
            app.kubernetes.io/instance: argocd
            app.kubernetes.io/name: argocd-repo-server
      toPorts:
        - ports:
            - port: '8081'
              protocol: TCP

    - toEndpoints:
        - matchLabels:
            app.kubernetes.io/instance: argocd
            app.kubernetes.io/name: argocd-redis
      toPorts:
        - ports:
            - port: '6379'
              protocol: TCP

    # Not covered by 'kube-apiserver', since IP is hardcoded
    # (this could as well have been another clusters API server)
    - toCIDR:
        - 192.168.30.190/32
      toPorts:
        - ports:
            - port: '6443'
              protocol: TCP
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: argocd-repo-server
  namespace: argocd
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/instance: argocd
      app.kubernetes.io/name: argocd-repo-server

  ingress:
    - fromEndpoints:
        - matchLabels:
            app.kubernetes.io/instance: argocd
            app.kubernetes.io/name: argocd-application-controller
        - matchLabels:
            app.kubernetes.io/instance: argocd
            app.kubernetes.io/name: argocd-applicationset-controller
        - matchLabels:
            app.kubernetes.io/instance: argocd
            app.kubernetes.io/name: argocd-server
      toPorts:
        - ports:
            - port: '8081'
              protocol: TCP

    - fromEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: monitoring
            app.kubernetes.io/name: prometheus
      toPorts:
        - ports:
            - port: '8084'
              protocol: TCP

  egress:
    - toEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: kube-system
            k8s-app: kube-dns
      toPorts:
        - ports:
            - port: '53'
              protocol: ANY
          rules:
            dns:
              - matchPattern: '*'

    - toFQDNs:
        - matchName: argoproj.github.io
        - matchName: auth.docker.io
        - matchName: bitnami.github.io
        - matchName: charts.goauthentik.io
        - matchName: charts.jetstack.io
        - matchName: charts.longhorn.io
        - matchName: charts.rustfs.com
        - matchName: cloudnative-pg.github.io
        - matchName: code.forgejo.org
        - matchName: codeberg.org
        - matchName: democratic-csi.github.io
        - matchName: github.com
        - matchName: helm.goharbor.io
        - matchName: helm.cilium.io
        - matchName: ghcr.io
        - matchName: intel.github.io
        - matchName: kubernetes-sigs.github.io
        - matchName: open-telemetry.github.io
        - matchName: pkgs.tailscale.com
        - matchName: pkg-containers.githubusercontent.com
        - matchName: production.cloudfront.docker.com
        - matchName: raw.githubusercontent.com
        - matchName: registry-1.docker.io
        - matchName: release-assets.githubusercontent.com
        - matchName: vmware-tanzu.github.io
      toPorts:
        - ports:
            - port: '443'
              protocol: TCP

    - toFQDNs:
        - matchName: github.com
      toPorts:
        - ports:
            - port: '22'
              protocol: TCP

    - toEndpoints:
        - matchLabels:
            app.kubernetes.io/instance: argocd
            app.kubernetes.io/name: argocd-redis
      toPorts:
        - ports:
            - port: '6379'
              protocol: TCP

    - toEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: forgejo
            app.kubernetes.io/name: forgejo
      toPorts:
        - ports:
            - port: '3000'
              protocol: TCP
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: argocd-applicationset-controller
  namespace: argocd
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/instance: argocd
      app.kubernetes.io/name: argocd-applicationset-controller

  ingress:
    - fromEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: monitoring
            app.kubernetes.io/name: prometheus
      toPorts:
        - ports:
            - port: '8080'
              protocol: TCP

  egress:
    - toEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: kube-system
            k8s-app: kube-dns
      toPorts:
        - ports:
            - port: '53'
              protocol: ANY
          rules:
            dns:
              - matchPattern: '*'

    - toEntities:
        - kube-apiserver
      toPorts:
        - ports:
            - port: '6443'
              protocol: TCP

    - toFQDNs:
        - matchName: api.github.com
      toPorts:
        - ports:
            - port: '22'
              protocol: TCP
            - port: '443'
              protocol: TCP

    - toEndpoints:
        - matchLabels:
            app.kubernetes.io/instance: argocd
            app.kubernetes.io/name: argocd-repo-server
      toPorts:
        - ports:
            - port: '8081'
              protocol: TCP

    - toEndpoints:
        - matchLabels:
            app.kubernetes.io/instance: argocd
            app.kubernetes.io/name: argocd-redis
      toPorts:
        - ports:
            - port: '6379'
              protocol: TCP
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: argocd-redis
  namespace: argocd
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/instance: argocd
      app.kubernetes.io/name: argocd-redis

  ingress:
    - fromEndpoints:
        - matchLabels:
            app.kubernetes.io/instance: argocd
            app.kubernetes.io/name: argocd-application-controller
        - matchLabels:
            app.kubernetes.io/instance: argocd
            app.kubernetes.io/name: argocd-repo-server
        - matchLabels:
            app.kubernetes.io/instance: argocd
            app.kubernetes.io/name: argocd-server
      toPorts:
        - ports:
            - port: '6379'
              protocol: TCP
